add a better call to action

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.css"></link>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800|Nunito+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800|Nunito+Sans|Permanent+Marker" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon-32px.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
